More touch ups to OutcomesDiagram refactor

--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -86,7 +86,7 @@
           transition: opacity 0.3s ease;
         }
 
-        &.visible {
+        &.load-animations {
           > div {
             opacity: 1;
           }
