--- a/src/components/Home/SolutionBlocks.scss
+++ b/src/components/Home/SolutionBlocks.scss
@@ -57,7 +57,7 @@
             margin: 0 auto 30px;
           }
 
-          >div {
+          > div {
             @include center-align(absolute);
             width: 100%;
             height: 100%;
@@ -77,7 +77,7 @@
             transition: opacity 0.3s ease;
           }
 
-          &.visible {
+          &.load-animations {
             > div {
               opacity: 1;
             }
