Fix to background highlight

--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -65,7 +65,7 @@
           background: linear-gradient(to right, rgba($white ,0) 50%, rgba($tertiary, 1.0) 50%);
           background-size: 200%;
           background-position: 0 0;
-          transition-property: all;
+          transition-property: background;
           transition-timing-function: ease-out;
           transition-duration: 1s;
           transition-delay: 1s;
