--- a/src/sass/base/__variables.scss
+++ b/src/sass/base/__variables.scss
@@ -7,6 +7,7 @@ $header-height-mobile: 85px;
 /*=============================================>>>>>
 = Brand colours =
 ===============================================>>>>>*/
+$text: #4F4F4F;
 $primary: #03A678;
 $secondary: #00C57B;
 $tertiary: #E8F4EF;
