--- a/src/components/faq/CategoryButtons.scss
+++ b/src/components/faq/CategoryButtons.scss
@@ -4,17 +4,29 @@
   .buttons {
 
     .category-button {
+      min-width: 0;
       margin-right: 15px;
 
       span {
         color: $secondary;
         border-color: $secondary;
+        padding: 7.5px 30px;
       }
 
       &.active {
         span {
           color: $white;
           background-color: $secondary;
+        }
+      }
+
+      &:before {
+        display: none;
+      }
+
+      &:hover {
+        span {
+          transform: none;
         }
       }
 
