--- a/src/components/faq/QuestionsList.scss
+++ b/src/components/faq/QuestionsList.scss
@@ -16,17 +16,19 @@
         .the-question {
           @include h2();
           flex: 1;
+          max-width: 850px;
           padding: 25px 100px 25px 0;
         }
 
         .category {
+          margin-left: auto;
           @include h4();
           color: $secondary;
         }
       }
 
       .bottom-container {
-
+        max-width: 850px;
       }
     }
   }
