Design feedback tweaks Rd 2

--- a/src/components/common/HtmlContent.scss
+++ b/src/components/common/HtmlContent.scss
@@ -67,7 +67,8 @@
 
   ul, ol {
     padding-left: 25px;
-    margin-bottom: 25px;
+    margin-top: 20px;
+    margin-bottom: 45px;
 
     li {
       margin-left: 15px;
