--- a/src/components/faq/FaqHero.scss
+++ b/src/components/faq/FaqHero.scss
@@ -36,8 +36,8 @@
 
   .svg-background {
     @include center-align(absolute);
-    height: 90%;
-    width: 90%;
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
 
     svg {
       height: 100%;
