--- a/src/components/faq/SearchBar.scss
+++ b/src/components/faq/SearchBar.scss
@@ -3,25 +3,27 @@
   margin-bottom: 30px;
 
   .search {
+    max-width: 850px;
     position: relative;
     margin: 0;
 
     .search-input {
       @include h4();
       width: 100%;
+      max-width: 850px;
       margin: 0;
       padding: 12px 20px 10px 50px;
       box-shadow: none;
-      color: $secondary;
+      color: $text;
       border-radius: 16px;
       box-shadow: 0;
-      border: 3px solid $secondary;
-      background-color: $white;
+      border: 3px solid $tertiary;
+      background-color: $tertiary;
       transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
 
       @include placeholder {
         @include h4();
-        color: $secondary;
+        color: $text;
         opacity: 0.7;
         transition: color 0.3s ease;
       }
@@ -55,12 +57,13 @@
 
     &.active, &.has-value {
       .search-input {
-        color: $white;
-        background-color: $secondary;
+        // color: $white;
+        // background-color: $secondary;
+        // border-color: $secondary;
       }
       .search-icon {
         svg {
-          fill: $tertiary;
+          // fill: $primary;
         }
       }
     }
@@ -68,7 +71,7 @@
     &.active {
       .search-input {
         @include placeholder {
-          color: $tertiary;
+          color: transparent;
         }
       }
     }
