--- a/src/components/faq/QuestionsList.scss
+++ b/src/components/faq/QuestionsList.scss
@@ -15,6 +15,24 @@
 
     .faq-question {
       margin-bottom: 60px;
+      overflow: hidden;
+
+      @include media-down(mobile) {
+        margin-bottom: 0;
+        border-top: 3px solid $tertiary;
+
+        &:last-child {
+          border-bottom: 3px solid $tertiary;
+        }
+
+        &.expanded {
+          .bottom-container {
+            height: auto;
+            opacity: 1;
+            transform: translateY(0%);
+          }
+        }
+      }
 
       .top-container {
         display: flex;
@@ -24,9 +42,8 @@
         margin-bottom: 30px;
 
         @include media-down(mobile) {
-          padding: 0 20px;
-          border-bottom: none;
-          border-top: 3px solid $tertiary;
+          padding: 30px 20px;
+          border: none;
           margin-bottom: 0px;
         }
 
@@ -37,7 +54,7 @@
           padding: 25px 100px 25px 0;
 
           @include media-down(mobile) {
-            padding: 40px 0 30px;
+            padding: 0;
           }
         }
 
@@ -50,6 +67,28 @@
             display: none;
           }
         }
+
+        .toggle-icon {
+          @include media-up(mobile) {
+            display: none;
+          }
+
+          height: 10px;
+          width: 15px;
+          padding: 20px;
+          box-sizing: content-box;
+          transform: rotate(0deg);
+          transition: transform 0.3s ease;
+
+          svg {
+            height: 100%;
+            width: 100%;
+          }
+
+          &.toggled {
+            transform: rotate(180deg);
+          }
+        }
       }
 
       .bottom-container {
@@ -57,6 +96,19 @@
 
         @include media-down(mobile) {
           padding: 0 20px;
+
+          > * {
+            &:last-child {
+              padding-bottom: 50px;
+            }
+          }
+        }
+
+        @include media-down(mobile) {
+          height: 0;
+          opacity: 0;
+          transition: height 0.3s ease, opacity 1s ease, transform 0.5s ease;
+          transform: translateY(10%);
         }
       }
     }
