--- a/src/components/faq/QuestionsList.scss
+++ b/src/components/faq/QuestionsList.scss
@@ -1,6 +1,15 @@
 .faq-question-list {
   margin-bottom: 160px;
 
+  .react-css-collapse-transition {
+    transition: height .33s cubic-bezier(.4, 0, .2, 1);
+
+    @include media-up(mobile) {
+      height: auto !important;
+      visibility: visible !important;
+    }
+  }
+
   .wrapper {
     @include media-down(mobile) {
       padding: 0;
@@ -27,9 +36,8 @@
 
         &.expanded {
           .bottom-container {
-            height: auto;
             opacity: 1;
-            transform: translateY(0%);
+            transform: translateY(0);
           }
         }
       }
@@ -54,6 +62,7 @@
           padding: 25px 100px 25px 0;
 
           @include media-down(mobile) {
+            font-size: 22px;
             padding: 0;
           }
         }
@@ -97,18 +106,15 @@
         @include media-down(mobile) {
           padding: 0 20px;
 
-          > * {
-            &:last-child {
-              padding-bottom: 50px;
-            }
+          .html-content {
+            padding-bottom: 50px;
           }
         }
 
         @include media-down(mobile) {
-          height: 0;
           opacity: 0;
-          transition: height 0.3s ease, opacity 1s ease, transform 0.5s ease;
-          transform: translateY(10%);
+          transition: opacity .33s ease-in-out, transform .33s ease-in-out;
+          transform: translateY(2rem);
         }
       }
     }
