--- a/src/components/faq/QuestionsList.scss
+++ b/src/components/faq/QuestionsList.scss
@@ -63,7 +63,7 @@
 
           @include media-down(mobile) {
             font-size: 22px;
-            padding: 0;
+            padding: 0 20px 0 0;
           }
         }
 
@@ -77,25 +77,17 @@
           }
         }
 
-        .toggle-icon {
+        .toggle-button {
+          border: 2px solid $secondary;
+          border-radius: 50%;
+          padding: 10px;
+
           @include media-up(mobile) {
             display: none;
           }
 
-          height: 10px;
-          width: 15px;
-          padding: 20px;
-          box-sizing: content-box;
-          transform: rotate(0deg);
-          transition: transform 0.3s ease;
-
-          svg {
-            height: 100%;
-            width: 100%;
-          }
-
-          &.toggled {
-            transform: rotate(180deg);
+          .icon {
+            @include plusMinus(15px, 2px, $secondary);
           }
         }
       }
