--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -150,3 +150,42 @@
     scrollbar-track-color: $background-color;
   }
 }
+
+
+@mixin plusMinus($width, $lineWidth, $color) {
+  box-sizing: border-box;
+  transition: transform 0.3s;
+  width: $width;
+  height: $width;
+  transform: rotate(180deg);
+  position: relative;
+
+  &.toggled {
+    transform: rotate(0deg);
+
+    &:before {
+      width: 0px;
+    }
+  }
+
+  &:before {
+    content: '';
+    display: block;
+    width: $width;
+    height:0px;
+    border-bottom: solid $lineWidth $color;
+    position: absolute;
+    bottom:$width /2 - $lineWidth/2;
+    transform: rotate(90deg);
+    transition: width 0.3s;
+  }
+  &:after {
+    content: '';
+    display: block;
+    width: $width;
+    height:0px;
+    border-bottom: solid $lineWidth $color;
+    position: absolute;
+    bottom:$width /2 - $lineWidth/2;
+  }
+}
