--- a/src/components/faq/QuestionsList.scss
+++ b/src/components/faq/QuestionsList.scss
@@ -95,6 +95,10 @@
       .bottom-container {
         max-width: 850px;
 
+        @include media-down(tablet) {
+          max-width: 700px;
+        }
+
         @include media-down(mobile) {
           padding: 0 20px;
 
