--- a/src/components/faq/FaqHero.scss
+++ b/src/components/faq/FaqHero.scss
@@ -1,6 +1,15 @@
 .faq-hero {
   position: relative;
   overflow: hidden;
+  background-color: $tertiary;
+  background-image: url('../../assets/images/hero-background.svg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  @include media-down(small-mobile) {
+    background-image: url('../../assets/images/hero-background-mobile.svg');
+  }
 
   .wrapper {
     position: relative;
@@ -8,7 +17,6 @@
   }
 
   .container {
-    background-color: $tertiary;
     padding: 190px 0 150px;
 
     @include media-down(mobile) {
@@ -31,17 +39,6 @@
 
     @include media-down(mobile) {
       max-width: 500px;
-    }
-  }
-
-  .svg-background {
-    @include center-align(absolute);
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
-
-    svg {
-      height: 100%;
-      width: 100%;
     }
   }
 }
