--- a/src/components/faq/SearchBar.scss
+++ b/src/components/faq/SearchBar.scss
@@ -14,6 +14,7 @@
 
     .search-input {
       @include h4();
+      font-size: 16px !important;
       width: 100%;
       max-width: 850px;
       margin: 0;
@@ -28,6 +29,7 @@
 
       @include placeholder {
         @include h4();
+        font-size: 16px !important;
         color: $text;
         opacity: 0.7;
         transition: color 0.3s ease;
