--- a/src/components/Plyr/settings/colors.scss
+++ b/src/components/Plyr/settings/colors.scss
@@ -2,7 +2,7 @@
 // Colors
 // ==========================================================================
 
-$plyr-color-main: hsl(198, 100%, 50%) !default;
+$plyr-color-main: $secondary;
 
 // Grayscale
 $plyr-color-gray-9: hsl(210, 15%, 16%);
