--- a/src/components/Slices/FullWidthVideoBlock.scss
+++ b/src/components/Slices/FullWidthVideoBlock.scss
@@ -3,7 +3,8 @@
 
   .title {
     @include h1();
+    max-width: 850px;
     text-align: center;
-    margin-bottom: 120px;
+    margin: 0 auto 120px;
   }
 }
