--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -5,9 +5,9 @@
 
     .section-title {
       @include h1();
-      margin: 0 auto;
+      max-width: 850px;
       text-align: center;
-      margin-bottom: 160px;
+      margin: 0 auto 120px;
     }
 
     .vision-block {
