--- a/src/components/Slices/TextAndVideoBlock.scss
+++ b/src/components/Slices/TextAndVideoBlock.scss
@@ -1,9 +1,6 @@
 .text-and-video-block {
-
-  .wrapper {
-    padding: 120px 20px;
-    background-color: $tertiary;
-  }
+  padding: 120px 20px;
+  background-color: $tertiary;
 
   .container {
     display: flex;
@@ -27,7 +24,7 @@
     }
 
     .video-col {
-      width: 60%;
+      width: 55%;
       padding: 20px;
 
       @include media-down(mobile) {
@@ -37,11 +34,11 @@
     }
 
     .text-col {
-      width: 40%;
+      width: 45%;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding-right: 50px;
+      padding-left: 50px;
 
       @include media-down(mobile) {
         align-items: center;
@@ -73,11 +70,6 @@
 
       .description {
         @include p1();
-        margin-bottom: 50px;
-
-        @include media-down(mobile) {
-          margin-bottom: 30px;
-        }
       }
 
       .actions {
