--- a/src/components/Slices/TeamGallery.scss
+++ b/src/components/Slices/TeamGallery.scss
@@ -19,4 +19,28 @@
     @include h3();
     margin-bottom: 50px;
   }
+
+  .actions {
+    margin-bottom: 60px;
+    
+    a {
+
+    }
+  }
+
+  .team-members {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    > * {
+      width: calc((100% / 3) - 35px);
+      margin-right: 50px;
+      margin-bottom: 60px;
+
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+    }
+  }
 }
