--- a/src/components/SubscribeForm.scss
+++ b/src/components/SubscribeForm.scss
@@ -1,136 +1,129 @@
-.subscribe-form-block {
+.subscribe-form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-  .block-title {
+  &.submit-success {
+    justify-content: center;
+    align-items: center;
 
+    p {
+      @include h4();
+    }
   }
 
-  .form-container {
+  form {
+    width: 100%;
+    max-width: 850px;
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
+    align-items: flex-end;
+    position: relative;
 
-    &.submit-success {
-      justify-content: center;
+    @include media-down(mobile) {
+      flex-direction: column;
       align-items: center;
-
-      p {
-        @include h4();
-      }
     }
 
-    form {
-      width: 100%;
-      max-width: 850px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: flex-end;
+    .field {
+      flex: 1.5;
       position: relative;
+      margin-bottom: 0;
+      margin-right: 20px;
 
       @include media-down(mobile) {
-        flex-direction: column;
-        align-items: center;
+        width: 100%;
+        max-width: 500px;
+        margin-right: 0;
+        margin-bottom: 20px;
       }
 
-      .field {
-        flex: 1.5;
-        position: relative;
-        margin-bottom: 0;
-        margin-right: 20px;
+      .field-label {
+        position: absolute;
+        transform: translateY(-100%);
+        top: -5px;
+        left: 5px;
+        opacity: 0;
+        font-size: 12px;
+        transition: opacity 0.3s ease, transform 0.3s ease;
 
         @include media-down(mobile) {
-          width: 100%;
-          max-width: 500px;
-          margin-right: 0;
-          margin-bottom: 20px;
+          top: 5px;
+          left: 22.5px;
+          font-size: 10px;
+          transform: translateY(50%);
         }
+      }
 
+      &.has-value {
         .field-label {
-          position: absolute;
-          transform: translateY(-100%);
-          top: -5px;
-          left: 5px;
-          opacity: 0;
-          font-size: 12px;
-          transition: opacity 0.3s ease, transform 0.3s ease;
+          opacity: 1;
 
           @include media-down(mobile) {
-            top: 5px;
-            left: 22.5px;
-            font-size: 10px;
-            transform: translateY(50%);
-          }
-        }
-
-        &.has-value {
-          .field-label {
-            opacity: 1;
-
-            @include media-down(mobile) {
-              transform: translateY(0%);
-            }
-          }
-
-          input {
-            @include media-down(mobile) {
-              padding-top: 20px;
-            }
+            transform: translateY(0%);
           }
         }
 
         input {
-          width: 100%;
-          @include h4();
-          padding: 10px 20px;
-          border-width: 3px;
-          border-style: solid;
-          background-color: $tertiary;
-          border-color: $tertiary;
-          border-radius: 16px;
-          transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease, padding 0.3s ease;
-          box-sizing: border-box;
-
-          &:active, &:focus {
-            border-color: $primary;
-            outline: none;
+          @include media-down(mobile) {
+            padding-top: 20px;
           }
         }
       }
 
-      .submit-button {
-        @include media-down(mobile) {
-          width: 100%;
-          max-width: 500px;
-          margin-top: 10px;
-        }
-      }
-
-      &.has-error {
-        .error-message {
-          opacity: 1;
-          transform: translateX(-50%) translateY(100%);
-        }
-      }
-
-      .error-message {
-        @include horizontal-align(absolute);
+      input {
         width: 100%;
-        bottom: -20px;
-        opacity: 0;
-        transition: opacity 0.3s ease, transform 0.3s ease;
-        transform: translateX(-50%) translateY(0%);
+        @include h4();
+        padding: 10px 20px;
+        border-width: 3px;
+        border-style: solid;
+        background-color: $tertiary;
+        border-color: $tertiary;
+        border-radius: 16px;
+        transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease, padding 0.3s ease;
+        box-sizing: border-box;
 
-        @include media-down(mobile) {
-          bottom: -15px;
+        &:active, &:focus {
+          border-color: $primary;
+          outline: none;
         }
+      }
+    }
 
-        span {
-          display: block;
-          @include p1();
-          text-align: center;
-          color: $error;
-        }
+    .submit-button {
+      @include media-down(mobile) {
+        width: 100%;
+        max-width: 500px;
+        margin-top: 10px;
+      }
+    }
+
+    &.has-error {
+      .error-message {
+        opacity: 1;
+        transform: translateX(-50%) translateY(100%);
+      }
+    }
+
+    .error-message {
+      @include horizontal-align(absolute);
+      width: 100%;
+      bottom: -20px;
+      opacity: 0;
+      transition: opacity 0.3s ease, transform 0.3s ease;
+      transform: translateX(-50%) translateY(0%);
+
+      @include media-down(mobile) {
+        bottom: -15px;
+      }
+
+      span {
+        display: block;
+        @include p1();
+        text-align: center;
+        color: $error;
       }
     }
   }
