Patched up NewsletterBlock

--- a/src/components/Slices/NewsletterBlock.scss
+++ b/src/components/Slices/NewsletterBlock.scss
@@ -46,7 +46,7 @@
         max-width: 450px;
       }
 
-      .label {
+      .section-label {
         display: block;
         @include h4();
         margin-bottom: 20px;
