--- a/src/components/Slices/NewsletterBlock.scss
+++ b/src/components/Slices/NewsletterBlock.scss
@@ -22,12 +22,37 @@
     }
 
     .image-col {
-      padding: 20px;
-      position: relative;
 
       @include media-down(mobile) {
-        padding: 0;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
+      }
+
+      .image-container {
+        width: 100%;
+        padding-bottom: 100%;
+        position: relative;
+
+        .colourful-background {
+          @include center-align(absolute);
+          width: 100%;
+          height: 100%;
+          z-index: 1;
+
+          svg {
+            width: 100%;
+            height: 100%;
+          }
+        }
+
+        .inner-image {
+          @include center-align(absolute);
+          width: 75%;
+          padding-bottom: 75%;
+          border: 3px solid $primary;
+          border-radius: 4px;
+          overflow: hidden;
+          z-index: 2;
+        }
       }
     }
 
@@ -68,10 +93,6 @@
       .description {
         @include p1();
         margin-bottom: 50px;
-
-        @include media-down(mobile) {
-          margin-bottom: 30px;
-        }
       }
 
       .subscribe-form-container {
@@ -82,11 +103,25 @@
           label {
             width: 100%;
             margin-right: 0;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
+
+            .field-label {
+              left: 0;
+              opacity: 1;
+              transform: translateY(-100%);
+
+              @include media-down(mobile) {
+                top: -5px;
+              }
+            }
           }
 
           button {
-            margin-top: 30px;
+            margin-top: 10px;
+
+            @include media-down(mobile) {
+              margin-top: 0;
+            }
           }
         }
       }
