--- a/src/components/Slices/GoalsCarousel.scss
+++ b/src/components/Slices/GoalsCarousel.scss
@@ -1,5 +1,9 @@
 .goals-carousel {
-  margin-bottom: 200px;
+  padding: 120px 0;
+
+  @include media-down(mobile) {
+    padding: 60px 0;
+  }
 
   .goal-block {
     display: flex;
