Remove once off options and selector, add tax disclaimer

--- a/src/components/Donations/DonationModal.scss
+++ b/src/components/Donations/DonationModal.scss
@@ -74,8 +74,9 @@
     @include media-down(mobile) {
       margin-bottom: 60px;
     }
-
-    button {}
+    .disclaimer{
+      text-align: center;
+    }
   }
 
   .error-message {
